--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -1,5 +1,7 @@
+// stylelint-disable
 $pf-c-page--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl", "2xl");
 $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl", "2xl");
+// stylelint-enable
 
 // URL.com/guidelines#layout
 .pf-c-page {
@@ -76,6 +78,8 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
   --pf-c-page__sidebar--m-light--BackgroundColor: var(--pf-global--BackgroundColor--light-100);
   --pf-c-page__sidebar--m-light--BorderRightWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-page__sidebar--m-light--BorderRightColor: var(--pf-global--BorderColor--100);
+  --pf-c-page__sidebar--m-light--c-divider--after--BackgroundColor: var(--pf-global--BorderColor--300);
+  --pf-c-page__sidebar--m-light--c-content--Color: var(--pf-global--Color--dark-100);
   --pf-c-page__sidebar--BoxShadow: var(--pf-global--BoxShadow--lg-right);
   --pf-c-page__sidebar--Transition: var(--pf-global--Transition);
   --pf-c-page__sidebar--TranslateX: -100%;
@@ -91,9 +95,14 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
   --pf-c-page__sidebar-body--m-menu--BorderTopColor: var(--pf-global--BackgroundColor--dark-200);
   --pf-c-page__sidebar-body--m-menu--BorderTopWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-page__sidebar-body--m-menu--c-context-selector--BorderBottomColor: var(--pf-global--BackgroundColor--dark-200);
+  --pf-c-page__sidebar-body--m-page-insets--inset: var(--pf-global--spacer--md); // make this the default inset at breaking change
+  --pf-c-page__sidebar-body--m-page-insets--xl--inset: var(--pf-global--spacer--lg); // make this the default inset at breaking change
+  --pf-c-page__sidebar-body--m-page-insets--PaddingRight: var(--pf-c-page__sidebar-body--m-page-insets--inset);
+  --pf-c-page__sidebar-body--m-page-insets--PaddingLeft: var(--pf-c-page__sidebar-body--m-page-insets--inset);
 
   @media screen and (min-width: $pf-global--breakpoint--xl) {
     --pf-c-page__sidebar--TranslateX: var(--pf-c-page__sidebar--xl--TranslateX);
+    --pf-c-page__sidebar-body--m-page-insets--inset: var(--pf-c-page__sidebar-body--m-page-insets--xl--inset);
   }
 
   // Main
@@ -190,6 +199,12 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
   --pf-c-page__main-wizard--BorderTopColor: var(--pf-global--BorderColor--100);
   --pf-c-page__main-wizard--BorderTopWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-page__main-wizard--m-light-200--BackgroundColor: var(--pf-global--BackgroundColor--200);
+
+  // Sidebar content
+  --pf-c-page__sidebar--c-content--Color: var(--pf-c-page__sidebar--Color);
+
+  // Sidebar divider
+  --pf-c-page__sidebar--c-divider--after--BackgroundColor: var(--pf-global--BackgroundColor--dark-200);
 
   // Base
   display: grid;
@@ -386,7 +401,11 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 
 // Sidebar
 .pf-c-page__sidebar {
+  @include pf-t-dark;
+
   z-index: var(--pf-c-page__sidebar--ZIndex);
+  display: flex;
+  flex-direction: column;
   grid-area: nav;
   grid-row-start: 2;
   grid-column-start: 1;
@@ -421,8 +440,11 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
     @include pf-t-light;
 
     --pf-c-page__sidebar--BackgroundColor: var(--pf-c-page__sidebar--m-light--BackgroundColor);
+  }
 
-    border-right: var(--pf-c-page__sidebar--m-light--BorderRightWidth) solid var(--pf-c-page__sidebar--m-light--BorderRightColor);
+  .pf-m-page-insets {
+    padding-right: var(--pf-c-page__sidebar-body--m-page-insets--PaddingRight);
+    padding-left: var(--pf-c-page__sidebar-body--m-page-insets--PaddingLeft);
   }
 }
 
@@ -452,6 +474,19 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 
       width: 100%;
     }
+  }
+
+  &.pf-m-no-padding {
+    --pf-c-page__sidebar-body--PaddingTop: 0;
+    --pf-c-page__sidebar-body--PaddingBottom: 0;
+  }
+
+  &.pf-m-align-bottom {
+    margin-top: auto;
+  }
+
+  &.pf-m-fill {
+    flex: 1;
   }
 }
 
