fix(label): allow text to truncate

--- a/src/patternfly/components/Label/label-text.hbs
+++ b/src/patternfly/components/Label/label-text.hbs
@@ -2,5 +2,9 @@
   {{#if label-text--attribute}}
     {{{label-text--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if label-text--text}}
+    {{label-text--text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
