--- a/src/patternfly/demos/Page/page-template-drawer-panel.hbs
+++ b/src/patternfly/demos/Page/page-template-drawer-panel.hbs
@@ -7,7 +7,7 @@
       {{/drawer-actions}}
       {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
         {{#> l-flex-item}}
-          {{#> label label--id="default-green" label--modifier="pf-m-blue pf-m-compact"}}
+          {{#> label label--id="default-blue" label--color="blue" label--IsCompact=true}}
             DC
           {{/label}}
         {{/l-flex-item}}
