--- a/src/patternfly/demos/PrimaryDetail/primary-detail-template-panel-body.hbs
+++ b/src/patternfly/demos/PrimaryDetail/primary-detail-template-panel-body.hbs
@@ -32,22 +32,22 @@
           {{#> label-group-main}}
             {{#> label-group-list label-group-list--attribute='aria-label="Group of labels"'}}
               {{#> label-group-list-item}}
-                {{#> label label--modifier="pf-m-outline"}}
+                {{#> label label--IsOutlined=true}}
                   Tag 1
                 {{/label}}
               {{/label-group-list-item}}
               {{#> label-group-list-item}}
-                {{#> label label--modifier="pf-m-outline"}}
+                {{#> label label--IsOutlined=true}}
                   Tag 2
                 {{/label}}
               {{/label-group-list-item}}
               {{#> label-group-list-item}}
-                {{#> label label--modifier="pf-m-outline"}}
+                {{#> label label--IsOutlined=true}}
                   Tag 3
                 {{/label}}
               {{/label-group-list-item}}
               {{#> label-group-list-item}}
-                {{#> label label--modifier="pf-m-overflow"}}
+                {{#> label label--IsOverflow=true}}
                   2 more
                 {{/label}}
               {{/label-group-list-item}}
