--- a/src/patternfly/demos/Tabs/tabs--pod-page-title.hbs
+++ b/src/patternfly/demos/Tabs/tabs--pod-page-title.hbs
@@ -1,6 +1,6 @@
 {{#> l-flex l-flex--modifier="pf-m-space-items-md pf-m-align-items-flex-start pf-m-nowrap"}}
   {{#> l-flex-item}}
-    {{#> label label--modifier="pf-m-blue"}}
+    {{#> label label--color="blue"}}
       N
     {{/label}}
   {{/l-flex-item}}
