--- a/src/patternfly/components/Label/label-editable-content.hbs
+++ b/src/patternfly/components/Label/label-editable-content.hbs
@@ -1,9 +1,10 @@
 <{{#if label-editable-content--type}}{{label-editable-content--type}}{{else if label--IsEditableActive}}input{{else}}button{{/if}} class="pf-c-label__content{{#if label-editable-content--modifier}} {{label-editable-content--modifier}}{{/if}}"
   id="{{label--id}}-editable-content"
-  {{#if label--IsEditableActive}} 
-    type="text" 
-    value="{{~> @partial-block}}"{{else}} 
-    currvalue="{{~> @partial-block}}"
+  {{#if label--IsEditableActive}}
+    type="text"
+    value="{{label-editable-content--value}}"
+  {{else}}
+    currvalue="{{label-editable-content--value}}"
   {{/if}}
   {{#if label-editable-content--aria-label}}
     aria-label="{{label-editable-content--aria-label}}"
