--- a/src/patternfly/demos/Card/templates/card-template-status.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-status.hbs
@@ -101,7 +101,7 @@
                   {{#> label-group-main}}
                     {{#> label-group-list label-group-list--attribute='aria-label="Group of labels"'}}
                       {{#> label-group-list-item}}
-                        {{#> label label--id="default-red-icon" label--modifier="pf-m-red"}}
+                        {{#> label label--id="default-red-icon" label--color="red"}}
                           {{#> label-icon}}
                             <i class="fas fa-fw fa-exclamation-circle" aria-hidden="true"></i>
                           {{/label-icon}}
@@ -109,7 +109,7 @@
                         {{/label}}
                       {{/label-group-list-item}}
                       {{#> label-group-list-item}}
-                        {{#> label label--id="default-orange-icon" label--modifier="pf-m-orange"}}
+                        {{#> label label--id="default-orange-icon" label--color="orange"}}
                           {{#> label-icon}}
                             <i class="fas fa-fw fa-exclamation-triangle" aria-hidden="true"></i>
                           {{/label-icon}}
@@ -117,7 +117,7 @@
                         {{/label}}
                       {{/label-group-list-item}}
                       {{#> label-group-list-item}}
-                        {{#> label label--id="default-green-icon" label--modifier="pf-m-green"}}
+                        {{#> label label--id="default-green-icon" label--color="green"}}
                           {{#> label-icon}}
                             <i class="fas fa-fw fa-check-circle" aria-hidden="true"></i>
                           {{/label-icon}}
@@ -125,7 +125,7 @@
                         {{/label}}
                       {{/label-group-list-item}}
                       {{#> label-group-list-item}}
-                        {{#> label label--id="default-blue-icon" label--modifier="pf-m-blue"}}
+                        {{#> label label--id="default-blue-icon" label--color="blue"}}
                           {{#> label-icon}}
                             <i class="fas fa-fw fa-info-circle" aria-hidden="true"></i>
                           {{/label-icon}}
@@ -133,7 +133,7 @@
                         {{/label}}
                       {{/label-group-list-item}}
                       {{#> label-group-list-item}}
-                        {{#> label label--id="default-cyan-icon" label--modifier="pf-m-cyan"}}
+                        {{#> label label--id="default-cyan-icon" label--color="cyan"}}
                           {{#> label-icon}}
                             <i class="fas fa-fw fa-bell" aria-hidden="true"></i>
                           {{/label-icon}}
