--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -16,6 +16,7 @@
   {{/if}}
   {{#if button--IsInlineLinkSpan}}
     role="button"
+    tabindex="0"
   {{/if}}
   {{#if button--aria-label}}
     aria-label="{{button--aria-label}}"
