--- a/src/patternfly/components/AppLauncher/app-launcher.scss
+++ b/src/patternfly/components/AppLauncher/app-launcher.scss
@@ -23,6 +23,7 @@
   --pf-c-app-launcher__toggle--focus--Color: var(--pf-global--Color--100);
   --pf-c-app-launcher__toggle--disabled--Color: var(--pf-global--disabled-color--200);
   --pf-c-app-launcher__toggle--m-expanded--Color: var(--pf-global--Color--100);
+  --pf-c-app-launcher__toggle--BackgroundColor: transparent;
 
   // Menu input
   --pf-c-app-launcher__menu-search--PaddingTop: var(--pf-global--spacer--sm);
@@ -104,6 +105,7 @@
 .pf-c-app-launcher__toggle {
   padding: var(--pf-c-app-launcher__toggle--PaddingTop) var(--pf-c-app-launcher__toggle--PaddingRight) var(--pf-c-app-launcher__toggle--PaddingBottom) var(--pf-c-app-launcher__toggle--PaddingLeft);
   color: var(--pf-c-app-launcher__toggle--Color);
+  background-color: var(--pf-c-app-launcher__toggle--BackgroundColor);
   border: none;
 
   &:hover {
